--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 							<article class="post featured">
 								<header class="major">
 									<h2><a href="#">My name is William Cheung</a></h2>
-									<p>A bit about myself</p>
+									<p>I am about to graduate from Newcastle University studying Bsc (Hons) Computer Science Software Engineering!</p>
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
