--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Portfolio</a>
+						<a href="index.html" class="logo">iOS Developer</a>
 					</header>
 
 				<!-- Nav -->
@@ -49,12 +49,16 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="#">My name is William Cheung</a></h2>
-									<p>I am about to graduate from Newcastle University studying Bsc (Hons) Computer Science Software Engineering!</p>
+									<h2><a href="#">My name is </br>William Cheung</a></h2>
+									<p>I am about to graduate from Newcastle University studying Bsc (Hons) Computer Science Software Engineering! </br>
+										I have been always curious about the latest technology since studying Computer Science in GCSE and A-level. </br>
+										Now, I have become extremely passionate in iOS technology since using it in my dissertation project. </br>
+										I want to push my own limits and explore what this new technology can bring to the world.
+									</p>
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">Check it out</a></li>
+									<li><a href="#" class="button large">University Projects</a></li>
 								</ul>
 							</article>
 
@@ -66,7 +70,7 @@
 										Fishing Guide</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>project description</p>
+									<p>A teaching app for beginner anglers</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Find out more</a></li>
 									</ul>
@@ -77,7 +81,7 @@
 										Kowloon House</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>project description</p>
+									<p>A takeaway app to order food</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Find out more</a></li>
 									</ul>
@@ -108,7 +112,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; 2021 William Chin Hei Cheung</li></ul>
 					</div>
 
 			</div>
