--- a/index.html
+++ b/index.html
@@ -29,13 +29,15 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">iOS Developer</a>
+						<a href="index.html" class="logo">iOS dev</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Home Page</a></li>
+							<li><a href="project1.html">FishingGuide</a></li>
+							<li><a href="project2.html">Project2</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/william-cheung-7b1418206" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
