--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 									<p>A teaching app for beginner anglers</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Find out more</a></li>
+										<li><a href="project1.html" class="button">Find out more</a></li>
 									</ul>
 								</article>
 								<article>
