--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 										Fishing Guide</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>A teaching app for beginner anglers</p>
+									<p>A learning app for beginner anglers</p>
 									<ul class="actions special">
 										<li><a href="project1.html" class="button">Find out more</a></li>
 									</ul>
