Navigation for project 2

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Home Page</a></li>
-							<li><a href="project1.html">FishingGuide</a></li>
-							<li><a href="project2.html">Project2</a></li>
+							<li><a href="project1.html">Fishing Guide</a></li>
+							<li><a href="project2.html">Kowloon House</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/william-cheung-7b1418206" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
@@ -85,7 +85,7 @@
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 									<p>A takeaway app to order food</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Find out more</a></li>
+										<li><a href="project2.html" class="button">Find out more</a></li>
 									</ul>
 								</article>
 							</section>
