--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">iOS dev</a>
+						<a class="logo">iOS dev</a>
 					</header>
 
 				<!-- Nav -->
@@ -51,7 +51,7 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="#">My name is </br>William Cheung</a></h2>
+									<h2>My name is </br>William Cheung</a></h2>
 									<p>I am about to graduate from Newcastle University studying Bsc (Hons) Computer Science Software Engineering! </br>
 										I have been always curious about the latest technology since studying Computer Science in GCSE and A-level. </br>
 										Now, I have become extremely passionate in iOS technology since using it in my dissertation project. </br>
@@ -68,22 +68,22 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="#">Dissertation Project <br/>(Beta phase)<br />
+										<h2>Dissertation Project <br/>(Beta phase)<br />
 										Fishing Guide</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>A learning app for beginner anglers</p>
+									<img src="images/FishingGuideLogo.png" class="logoImage" alt="" width="150" height="150"/></a>
+									<p class="align-center">A learning app for beginner anglers</p>
 									<ul class="actions special">
 										<li><a href="project1.html" class="button">Find out more</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Project for client (Ongoing)<br />
+										<h2>Project for client (Ongoing)<br />
 										Kowloon House</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>A takeaway app to order food</p>
+									<img src="images/KowloonHouse.PNG" class="logoImage" alt="" width="150" height="150"/>
+									<p class="align-center">A takeaway app to order food</p>
 									<ul class="actions special">
 										<li><a href="project2.html" class="button">Find out more</a></li>
 									</ul>
