--- a/project1.html
+++ b/project1.html
@@ -136,7 +136,7 @@
 					<section class="split contact">
 						<section>
 							<h3>Email</h3>
-							<p><a href="#">williamcheung965@gmail.com</a></p>
+							<p><a href="mailto:williamcheung965@gmail.com">williamcheung965@gmail.com</a></p>
 						</section>
 						<section>
 							<h3>Social</h3>
