--- a/project2.html
+++ b/project2.html
@@ -154,7 +154,7 @@
 					<section class="split contact">
 						<section>
 							<h3>Email</h3>
-							<p><a href="#">williamcheung965@gmail.com</a></p>
+							<p><a href="mailto:williamcheung965@gmail.com">williamcheung965@gmail.com</a></p>
 						</section>
 						<section>
 							<h3>Social</h3>
