--- a/project1.html
+++ b/project1.html
@@ -77,6 +77,10 @@
 											<div class="col-4"><span class="image fit"><img src="images/FG4.jpg" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/FG5.PNG" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/FG6.PNG" alt="" /></span></div>
+											<!-- Break -->
+											<div class="col-4"><span class="image fit"><img src="images/FG10.PNG" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/FG11.PNG" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/FG12.PNG" alt="" /></span></div>
 										</div>
 									</div>
 
