--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Home Page</a></li>
+							<li><a href="university.html">University</a></li>
 							<li><a href="project1.html">Fishing Guide</a></li>
 							<li><a href="project2.html">Kowloon House</a></li>
 						</ul>
@@ -60,7 +61,7 @@
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">Find out more</a></li>
+									<li><a href="university.html" class="button large">Find out more</a></li>
 								</ul>
 							</article>
 
