--- a/project1.html
+++ b/project1.html
@@ -26,6 +26,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="index.html">Home Page</a></li>
+							<li><a href="university.html">University</a></li>
 							<li class="active"><a href="project1.html">Fishing Guide</a></li>
                             <li><a href="project2.html">Kowloon House</a></li>
 						</ul>
