--- a/project2.html
+++ b/project2.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">iOS dev</a>
+						<a class="logo">iOS dev</a>
 					</header>
 
 				<!-- Nav -->
@@ -88,7 +88,7 @@
 										<h3>SDKs</h3>
 										<ul class="alt">
 											<li>MailCore 2</li>
-											<li>Stripe?</li>
+											<li>Stripe(?)</li>
 										
 										</ul>
 										
