--- a/university.html
+++ b/university.html
@@ -51,21 +51,22 @@
 
                                     <hr />
 									<h2>What i've achieved!</h2>
-									<p>2 years <b>Java</b></br>
-                                    1 year <b>C++</b></br> 
-                                    Website Design and Construction using <b>HTML</b>, <b>CSS</b></br>
-                                    Database Technology using <b>MySQL</b>, <b>NoSQL</b> </br>
-                                    Project and Dissertation using <b>Swift</b></br>
-                                    Human-Computer Interaction (HCI)</br>
-                                    Team Project - Creating an Android Mobile App using <b>Android Studio and Java</b> </br>
-                                    Algorithm Design and Analysis </br>
-                                    Operating Systems </br>
-                                    Understanding Concurrency using <b>Workcraft</b></br>
-                                    Modelling systems using <b>VDMSL</b>, <b>VDMRT</b>, <b>Isabelle</b></br>
-                                    Computer Architecture using <b>Assembly Language</b></br>
-                                    Biologically-inspired Computing</br>
-                                    Computer Networks, System and Network Security, Cryptography </br>                             
-                                    </p>
+                                    <ul>
+                                        <li>2 years <b>Java</b></li>
+                                        <li>1 year <b>C++</b></li>
+                                        <li>Website Design and Construction using <b>HTML</b>, <b>CSS</b></li>
+                                        <li>Database Technology using <b>MySQL</b>, <b>NoSQL</b></li>
+                                        <li>Project and Dissertation using <b>Swift</b></li>
+                                        <li>Human-Computer Interaction (HCI)</li>
+                                        <li>Team Project - Creating an Android Mobile App using <b>Android Studio and Java</b> </li>
+                                        <li>Algorithm Design and Analysis </li>
+                                        <li>Operating Systems</li>
+                                        <li>Understanding Concurrency using <b>Workcraft</b></li>
+                                        <li>Modelling systems using <b>VDMSL</b>, <b>VDMRT</b>, <b>Isabelle</b></li>
+                                        <li>Computer Architecture using <b>Assembly Language</b></li>
+                                        <li>Biologically-inspired Computing</li>
+                                        <li>Computer Networks, System and Network Security, Cryptography </li>
+                                    </ul>
 									<hr />
 									<h2>My passion</h2>
 									<p>Out of all the modules I have explored in my time at university, I have grown a passion for software development.
