--- a/project1.html
+++ b/project1.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a class="logo">iOS dev</a>
+						<a href="index.html" class="logo">iOS dev</a>
 					</header>
 
 				<!-- Nav -->
