--- a/project2.html
+++ b/project2.html
@@ -53,7 +53,14 @@
 									<p>A takeaway app to order food.</p>
 									<hr />
 									<h2>Motivation</h2>
-									<p></p>
+									<p>Allows online orders to be taken for the takeaway which allows the company to:</p>
+										<ul>
+											<li>Reach out to a larger audience at all times</li>
+											<li>Make the ordering process easier, especially during COVID-19 situation.</li>
+											<li>Have efficient customer and order management (saving new/active/canceled orders to database, 
+												sending order notifications via email to customers and via online printer to takeaway staff)
+											</li>
+										</ul> 
 									<hr />
 
 								<!-- Image -->
@@ -89,6 +96,7 @@
 										<ul class="alt">
 											<li>MailCore 2</li>
 											<li>Stripe(?)</li>
+											<li>Amazon Web Services (DynamoDB)</li>
 										
 										</ul>
 										
