--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 							<article class="post featured">
 								<header class="major">
 									<h2>My name is </br>William Cheung</a></h2>
-									<p>I am about to graduate from Newcastle University studying Bsc (Hons) Computer Science Software Engineering! </br>
+									<p>I am about to graduate from Newcastle University studying BSc (Hons) Computer Science Software Engineering! </br>
 										I have been always curious about the latest technology since studying Computer Science in GCSE and A-level. </br>
 										Now, I have become extremely passionate in iOS technology since using it in my dissertation project. </br>
 										I want to push my own limits and explore what this new technology can bring to the world.
