--- a/project2.html
+++ b/project2.html
@@ -80,7 +80,10 @@
 								<hr />
 								<div class="row">
 									<div class="col-6 col-12-small">
-
+										<h3>Language</h3>
+										<ul>
+											<li>Swift</li>
+										</ul>
 										<h3>Frameworks</h3>
 										<ul>
 											<li>SwiftUI</li>
@@ -96,7 +99,7 @@
 										<ul class="alt">
 											<li>MailCore 2</li>
 											<li>Stripe(?)</li>
-											<li>Amazon Web Services (DynamoDB)</li>
+											<li>Firebase Database</li>
 										
 										</ul>
 										
