--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 									<h2>My name is </br>William Cheung</a></h2>
 									<p>I am about to graduate from Newcastle University studying BSc (Hons) Computer Science Software Engineering! </br>
 										I have been always curious in technology since studying Computer Science in GCSE and A-level. </br>
-										Now, I have become extremely passionate in creating native apps and web apps! </br>
+										As of now, I am creating native apps and web apps! </br>
 									</p>
 								</header>
 								
