--- a/project1.html
+++ b/project1.html
@@ -89,7 +89,10 @@
 								<hr />
 								<div class="row">
 									<div class="col-6 col-12-small">
-
+										<h3>Language</h3>
+										<ul>
+											<li>Swift</li>
+										</ul>
 										<h3>Frameworks</h3>
 										<ul>
 											<li>SwiftUI</li>
@@ -109,6 +112,7 @@
 										<h3>Approach</h3>
 										<ul>
 											<li>Agile Methodology</li>
+											<li>Apple's Design Guidelines</li>
 										</ul>
 
 									</div>
