--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2>Dissertation Project <br/>(Beta phase)<br />
+										<h2>Dissertation Project <br/>(Deployed to app store)<br />
 										Fishing Guide</a></h2>
 									</header>
 									<img src="images/FishingGuideLogo.png" class="logoImage" alt="" width="150" height="150"/></a>
