--- a/project1.html
+++ b/project1.html
@@ -50,7 +50,8 @@
 									<hr />
 									<h2>Dissertation Project</h2>
 									<p>A learning app for beginner anglers.</br>
-									Click <a href="https://testflight.apple.com/join/HjZu28M0" target="_blank">here</a> to check out the beta version!</p>
+									Click <a href="" target="_blank">here</a> to check out the app on the App Store!</br>
+									Click <a href="https://chin-hei.github.io/FishingGuide-Website/" target="_blank">here</a> to check out the app's website!</p>
 									<hr />
 									<h2>Motivation</h2>
 									<ul>
@@ -89,10 +90,10 @@
 								<hr />
 								<div class="row">
 									<div class="col-6 col-12-small">
-										<h3>Language</h3>
-										<ul>
-											<li>Swift</li>
-										</ul>
+											<h3>Language</h3>
+											<ul>
+												<li>Swift</li>
+											</ul>
 										<h3>Frameworks</h3>
 										<ul>
 											<li>SwiftUI</li>
@@ -107,6 +108,7 @@
 										<h3>Data persistence</h3>
 										<ul>
 											<li>UserDefaults</li>
+											<li>Documents Directory</li>
 										</ul>
 
 										<h3>Approach</h3>
