--- a/project1.html
+++ b/project1.html
@@ -50,7 +50,7 @@
 									<hr />
 									<h2>Dissertation Project</h2>
 									<p>A learning app for beginner anglers.</br>
-									Click <a href="" target="_blank">here</a> to check out the app on the App Store!</br>
+									Click <a href="https://apps.apple.com/gb/app/fishingguide/id1572205453" target="_blank">here</a> to check out the app on the App Store!</br>
 									Click <a href="https://chin-hei.github.io/FishingGuide-Website/" target="_blank">here</a> to check out the app's website!</p>
 									<hr />
 									<h2>Motivation</h2>
