--- a/project1.html
+++ b/project1.html
@@ -109,6 +109,13 @@
 											<li>Apple's Design Guidelines</li>
 										</ul>
 
+										<h3>Refinement</h3>
+										<ul>
+											<li>Beta testing (TestFlight)</li>
+											<li>Xcode Unit Testing</li>
+											<li>Xcode Instruments</li>
+										</ul>
+
 									</div>
 								</div>
 
