--- a/index.html
+++ b/index.html
@@ -90,6 +90,13 @@
 								</article>
 							</section>
 
+							<!-- Featured Post -->
+							<article class="post featured">
+								<h2> Tech Stack</a></h2>
+									<p>Insert images here </br>
+									</p>
+							</article>
+
 						<!-- Footer -->
 
 
