--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 							<!-- Featured Post -->
 							<article class="post featured">
 								<h2> Tech Stack</a></h2>
-									<p>Insert images here </br>
-									</p>
+									<!--<p>Insert images here </br>
+									</p>-->
 							</article>
 
 						<!-- Footer -->
