--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 							<!-- Featured Post -->
 							<article class="post featured">
-								<h2> Tech Stack</a></h2>
+								<h2> Main Tech Stack</a></h2>
 									<!--<p>Insert images here </br>
 									</p>-->
 							</article>
