--- a/index.html
+++ b/index.html
@@ -102,10 +102,11 @@
 								<img src = "images/reactjs.png" alt="" width="150" height="150"/>
 								<img src = "images/javascript.png" alt="" width="150" height="150"/>
 								<img src = "images/swiftui.png" alt="" width="150" height="150"/>
+								</br>
 								<h3>Cloud Providers</h3>
 								<img src = "images/firebase.png" alt="" width="150" height="150"/>
 							</header>
-							</article>>
+							</article>	
 
 						<!-- Footer -->
 
