--- a/project2.html
+++ b/project2.html
@@ -68,8 +68,8 @@
 
 									<div class="box alt">
 										<div class="row gtr-50 gtr-uniform">
-											<div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-
+											<div class="col-4"><span class="image fit"><img src="images/c2.png" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/c1.png" alt="" /></span></div>
 										</div>
 									</div>
 
