--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 -->
 <html>
 	<head>
-		<title>William Cheung</title>
+		<title>William Cheung - Software Developer</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -53,9 +53,10 @@
 							<article class="post featured">
 								<header class="major">
 									<h2>My name is </br>William Cheung</a></h2>
-									<p>I am about to graduate from Newcastle University studying BSc (Hons) Computer Science Software Engineering! </br>
-										I have been always curious in technology since studying Computer Science in GCSE and A-level. </br>
-										As of now, I am creating native apps and web apps! </br>
+									<p>An experienced <strong>developer</strong>, focused on native <strong>iOS apps</strong>.  </br>
+									
+										As of right now, I am creating apps at mkodo. </br><hr />
+										I have been always excited about technology since studying Computer Science in GCSE & A-level and becoming a graduate in Computer Science Software Engineering. </br>
 									</p>
 								</header>
 								
