--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 								</article>
 								<article>
 									<header>
-										<h2>Project for client (Ongoing)<br />
+										<h2>Personal Project for client<br />
 										Kowloon House</a></h2>
 									</header>
 									<img src="images/KowloonHouse.PNG" class="logoImage" alt="" width="150" height="150"/>
