--- a/university.html
+++ b/university.html
@@ -46,7 +46,7 @@
 									University</h1>	<a href = "https://www.ncl.ac.uk/" style="text-decoration:none;"> 
 										<img src="images/newcastle_logo.png"alt="" width="150" height="150"/> </a>
 								
-                                    <p>Bsc (Hons) Computer Science Software Engineering G600 (3 years)</p>
+                                    <p>Bsc (Hons) Computer Science Software Engineering G600 (3 years)</br>Final Grade: 2:1 Hons</p>
 								</header>
 
 								<!-- Overview -->
